.kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
  name: prueba-gha
spec:
  replicas: 1
  selector:
    matchLabels:
      name: prueba-gha
  template:
    metadata:
      labels:
        name: prueba-gha
    spec:
      containers:
      - name: prueba-gha
        image: rrodriperezz/prueba-gha
        ports:
        - containerPort: 80
          name: http
