.kustomize/prueba-gha.yaml
apiVersion: v1
kind: Service
metadata:
  name: prueba-gha
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: prueba-gha
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prueba-gha
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prueba-gha
  template:
    metadata:
      labels:
        app: prueba-gha
    spec:
      containers:
      - name: prueba-gha
        image: rrodriperezz/prueba-gha:latest
        ports:
        - containerPort: 8080
