.kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prueba-gha
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
  selector:
    name: prueba-gha
