.kustomize/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prueba-gha
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "pruebagha.sytes.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prueba-gha
            port:
              number: 80
