.kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prueba-gha
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "pruebagha.sytes.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prueba-gha
            port:
              number: 80
